Make doge position absolute via price

--- a/userinterface/src/styles/logStyles.css
+++ b/userinterface/src/styles/logStyles.css
@@ -2,7 +2,18 @@
     --customBlue: #3490DC;
     --customLightBlue: #61dafb;
 }
+
 #space{
     height: 100vh;
     background: url(../imgs/empty-space.jpg);
+}
+
+h1{
+    color:white
+}
+
+#doge{
+    height: 250px;
+    width: 500px;
+    position: absolute;
 }
