--- a/userinterface/src/styles/logStyles.css
+++ b/userinterface/src/styles/logStyles.css
@@ -8,19 +8,59 @@
     background: url(../imgs/empty-space.jpg);
 }
 
-h1{
+h1, h3{
     color:white
 }
 
 #doge{
-    height: 250px;
-    width: 500px;
+    /* height: 150px;
+    width: 300px; */
+    height: 12vh;
+    width: 24vh;
+    z-index: 3;
+    position: relative;
+    transform: translate(50%,-50%);
+}
+
+#titleInfo{
+    display: none;
+    position: fixed;
+    right: 50%;
+    transform: translate(50%,0%);
+    text-align: center;
+    z-index: 10;
+    background-color: rgb(71, 120, 255);
+    border-radius: 10px;
+    padding: 10px;
+    width: fit-content;
+}
+
+.line{
+    background-color: yellow;
+    width: 100%;
+    height: 3px;
+    z-index: 2;
     position: absolute;
-    color: antiquewhite;
+    margin: 0;
 }
 
 #moon{
     position: absolute;
     top: 0%;
     right: 0%;
+    width: 20vh;
+    height: 20vh;
+}
+
+#one{
+    bottom: 99.5%;
+}
+#threeQuarters{
+    bottom: 75%;
+}
+#half{
+    bottom: 50%;
+    }
+#oneQuarter{
+    bottom: 25%;
 }
